# semantic-search-fall-2024

./: docker-compose.yaml  package-lock.json  pyproject.toml
semantic_search/: __init__.py
semantic_search/models/: .Atharv Course Embeddings.npy.icloud  .raymond_course_faiss_index.index.icloud  .subhash_course_faiss_index.index.icloud  .subhash_course_metadata.json.icloud  atharv-model.py  glove.py  jacky_model.py  matthew-pinecone.py  raymond-model.py  subhash_query.py
